[tool.poetry]
name = "sandbox_python_package"
version = "0.1.0"
description = ""
authors = ["okmtz <yuto430scuderia@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
sandbox-poetry = {git = "ssh://git@github.com/okmtz/python_hello_mod.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
